Inicio de modulo registro de usuarios
